--- a/Code.ipynb
+++ b/Code.ipynb
@@ -52510,14 +52510,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 195,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t1\n",
+      "2015-10-03 00:00:00\n",
+      "peak_date_init\n",
+      "DatetimeIndex(['2015-11-02', '2016-05-26', '2016-06-11', '2017-12-06'], dtype='datetime64[ns]', name=u'Date', freq=None)\n",
+      "t1\n",
+      "2015-09-30 00:00:00\n",
+      "peak_date_init\n",
+      "DatetimeIndex(['2015-11-02', '2016-05-26', '2016-06-11', '2017-12-06'], dtype='datetime64[ns]', name=u'Date', freq=None)\n",
+      "t1\n",
+      "2015-09-27 00:00:00\n",
+      "peak_date_init\n",
+      "DatetimeIndex(['2015-11-02', '2016-05-26', '2016-06-11', '2017-12-06'], dtype='datetime64[ns]', name=u'Date', freq=None)\n",
+      "t1\n",
+      "2015-09-24 00:00:00\n",
+      "peak_date_init\n",
+      "DatetimeIndex(['2015-11-02', '2016-05-26', '2016-06-11', '2017-12-06'], dtype='datetime64[ns]', name=u'Date', freq=None)\n"
+     ]
+    }
+   ],
    "source": [
     "#B. Identification of the Beginning Times of Long and Short Bubbles\n",
     "#Appendix D: The Lagrange Regularisation Approach for the Determination of Bubble Start Times\n",
     "\n",
-    "#{(0.1 <= m <= 0.9),(6 <= ω <= 13),(t2 −[t2−t1] < tc < t2 +[t2−t1])},\n",
+    "#{(0.1 <= m <= 0.9),(6 <= ω <= 13),(t2 −[t2−t1] < tc <= t2 +[t2−t1])},\n",
     "\n",
     "#t2 - t1 [30,1600] 3 514\n",
     "#https://arxiv.org/pdf/1108.0099.pdf\n",
@@ -52528,97 +52551,103 @@
     "\n",
     "class LPPLBegDate:\n",
     "#Solving Linear Variables\n",
-    "    def __init__(self,data,peak_Date,previous_peak_date):\n",
+    "    def __init__(self,data,peak_Date,previous_peak_date,t1_date,t1):\n",
     "        self.data = data\n",
-    "        self.peak_date = peak_date\n",
-    "        self.previous_peak_date\n",
+    "        self.peak_date = peak_Date\n",
+    "        self.previous_peak_date = previous_peak_date\n",
+    "        self.t1_date = t1_date\n",
+    "        self.t1      = t1\n",
+    "        print(\"peak_date_init\")\n",
+    "        print(peak_date)\n",
     "            \n",
     "    def fit(self):\n",
     "        peak_date          = self.peak_date\n",
     "        previous_peak_date = self.previous_peak_date\n",
+    "        t1_date            = self.t1_date\n",
+    "        t1                 = self.t1\n",
     "        date_range         = (peak_date - previous_peak_date).days\n",
-    "        model              = {}\n",
-    "        for t1 in range(30,date_range,3):\n",
-    "            t1_date = peak_date - datetime.timedelta(days=t1)\n",
-    "            for m in range(0.2,0.9,0.1):\n",
-    "                for w in range(7,13,1):\n",
-    "                    for tc in range(-t1,t1,1):\n",
-    "                        tc_new = peak_date + datetime.timedelta(days=tc)\n",
-    "                        model[(m,w,tc)] = LPPL\n",
+    "        model_beginning    = {}\n",
+    "        m_domain           = np.arange(0.1,5.1,0.1)\n",
+    "        w_domain           = np.arange(7,13,1)\n",
+    "        data               = self.data\n",
+    "        peak_ahead_date = peak_date + datetime.timedelta(days=1)\n",
+    "        data_input = data.loc[t1_date:peak_ahead_date]\n",
+    "        for m in m_domain:\n",
+    "            for w in w_domain:\n",
+    "                for tc in range(2,t1,1):\n",
+    "                    tc_new = peak_date + datetime.timedelta(days=tc)\n",
+    "                    model_beginning[(m,w,tc)] = self.LPPL(data_input,m,w,tc_new)\n",
+    "        sorted_model_beginning = sorted(model_beginning.items(), key=operator.itemgetter(1))            \n",
+    "        return sorted_model_beginning[0]\n",
     "                        \n",
     "        \n",
-    "        \n",
-    "    def LPPL(data, m=1, omega=1, tc=0):\n",
+    "    def LPPL(self,data,m,omega,tc):\n",
     "        date1             = tc\n",
     "        date2             = data.index\n",
     "        data['X']         = (date1 - date2).days\n",
-    "        data['Xm']        = data ** m #B\n",
-    "        data['Xm_cos']    = data['X']**m*math.cos(omega*log(data['X'])) #C1\n",
-    "        data['Xm_sin']    = data['X']**m*math.sin(omega*log(data['X'])) #C2\n",
-    "        data['logP']      = log(data['avg_btc_price_usd'])\n",
+    "        data['Xm']        = data['X']**m #B\n",
+    "        data['Xm_cos']    = data['Xm']*np.cos(omega*np.log(data['X'])) #C1\n",
+    "        data['Xm_sin']    = data['Xm']*np.sin(omega*np.log(data['X'])) #C2\n",
+    "        data['logP']      = np.log(data['avg_btc_price_usd'])\n",
     "        formula           = \"logP ~ Xm + Xm_cos + Xm_sin\"\n",
     "        score             = smf.ols(formula, data).fit()\n",
     "        A = score.params[0]\n",
     "        B = score.params[1]\n",
     "        C1 = score.params[2]\n",
     "        C2 = score.params[3]\n",
-    "        result = exp(A + B*(data['X']**m) + C1*(data['X']**m)*cos(omega*log(data['X'])) + C2*(data['X']**m)*sin(omega*log(data['X']))\n",
-    "        residual = sum((result - data['avg_btc_price_usd'])**2)\n",
+    "        result = np.exp(A + B*(data['X']**m) + C1*(data['X']**m)*np.cos(omega*np.log(data['X'])) + C2*(data['X']**m)*np.sin(omega*np.log(data['X'])))\n",
+    "        residual = np.sum((result - data['avg_btc_price_usd'])**2)\n",
     "        return residual\n",
+    "    \n",
     "\n",
-    "\n",
-    "  \n",
-    "\n",
-    "    #Plotting everything\n",
-    "    tryParams <- function (m, omega, tc) {  \n",
-    "      lm.result <- LPPL(rTicker, m, omega, tc)\n",
-    "      plot(rTickerPlot$t, rTickerPlot$Close, typ='l') #base graph based on data\n",
-    "      generate_vector = seq(min(rTicker$t), tc-0.002, 0.002)\n",
-    "      lines(generate_vector, FittedLPPLwithexpected(rTicker, lm.result, generate_vector, m, omega, tc), col=\"red\")\n",
-    "    }\n",
-    "\n",
-    "    # Sum of squared residuals, to evaluate the fitness of m, omega, phi\n",
-    "    residuals <- function(m, omega, tc) {\n",
-    "      lm.result <- LPPL(rTicker, m, omega, tc)\n",
-    "      return(sum((FittedLPPL(rTicker, lm.result, m, omega, tc) - rTicker$Close) ** 2))\n",
-    "    }\n",
-    "\n",
-    "\n",
-    "    residual_obj <- function(x) {\n",
-    "      return(residuals(x[1], x[2], x[3]))\n",
-    "    }\n",
-    "\n",
-    "\n",
-    "    #Function if wanting to return original LPPL coeffs\n",
-    "    getcoeff_regLPPL <- function(m, omega, tc) {\n",
-    "      lm.result <- LPPL(rTicker, m, omega, tc)\n",
-    "      getcoeff_regLPPL <- c(lm.result$coefficients[1],lm.result$coefficients[2], lm.result$coefficients[3], lm.result$coefficients[4])\n",
-    "    }\n",
-    "\n",
-    "    #Optimisation Procedure using CMAES\n",
-    "    vec_control <- data.frame(maxit = c(100))   \n",
-    "    test <- cma_es(c(0.01, 5, max(rTicker$t)+0.002), residual_obj, lower=c(0.01, 5, max(rTicker$t)+0.002), upper=c(1, 16, max(rTicker$t)+0.25), control=vec_control)\n",
-    "\n",
-    "    test$par\n",
-    "\n",
-    "    #Quick Check of Results\n",
-    "    m <- test$par[1]\n",
-    "    omega <- test$par[2]\n",
-    "    tc <- test$par[3]\n",
-    "\n",
-    "    tryParams(test$par[1], test$par[2], test$par[3])\n",
-    "\n",
-    "    #Printing Full Results\n",
-    "    linear_param <- getlinear_param(test$par[1], test$par[2], test$par[3])\n",
-    "    last_row <- tail(rTicker, 1)\n",
-    "    df_result <- NULL\n",
-    "    rbind(df_result, c(format(from, \"%Y-%m-%d\"), format(to, \"%Y-%m-%d\"), last_row$t, last_row$Close, test$par[3]-last_row$t, as.integer((test$par[3]-last_row$t)/(1/365)), test$par[1], test$par[2], test$par[3], linear_param[1], linear_param[2], linear_param[3], linear_param[4])) -> df_result\n",
-    "    colnames(df_result) <- c(\"date_from\", \"date_to\", \"t\", \"price\",\"t_until_critical_point\", \"days_before_critical_time\", \"beta\", \"omega\", \"tc\", \"A\", \"B\", \"C1\", \"C2\")\n"
+    "if __name__ == '__main__':\n",
+    "    log_price = np.log(btc_usd_datasets['avg_btc_price_usd'])\n",
+    "    log_price_shift = log_price.shift(1)\n",
+    "    log_return = log_price_shift - log_price\n",
+    "    peak_date = btc_usd_datasets.index[final_end]\n",
+    "    init_date = btc_usd_datasets.index[0]\n",
+    "    Beginning_Date1 = {}\n",
+    "    \n",
+    "    for t1 in range(30,40,3):\n",
+    "            t1_date = peak_date[0] - datetime.timedelta(days=t1)\n",
+    "            print(\"t1\")\n",
+    "            print(t1_date)\n",
+    "            Beginning_Date1_iter = LPPLBegDate(btc_usd_datasets,peak_date[0],init_date,t1_date,t1)\n",
+    "            Beginning_Date1[t1] = Beginning_Date1_iter.fit()\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 196,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{33: ((0.10000000000000001, 7, 2), 628.92153629210611), 36: ((0.10000000000000001, 7, 2), 643.67039994164134), 30: ((0.10000000000000001, 7, 2), 627.69481895675835), 39: ((0.10000000000000001, 9, 2), 658.45589041847234)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#import operator\n",
+    "#sorted_x = sorted(Beginning_Date1_result.items(), key=operator.itemgetter(1))\n",
+    "\n",
+    "#print(sorted_x[0][0][1])\n",
+    "#for k in sorted_x:\n",
+    "#    print(k)\n",
+    "#print(sorted_x)\n",
+    "#min(Beginning_Date1_result, key=Beginning_Date1_result.get)\n",
+    "\n",
+    "print(Beginning_Date1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -52626,7 +52655,21 @@
      "output_type": "stream",
      "text": [
       "2011-10-13 00:00:00\n",
-      "2011-09-13 00:00:00\n"
+      "2011-09-13 00:00:00\n",
+      "            BITSTAMP  COINBASE  ITBIT  KRAKEN  avg_btc_price_usd\n",
+      "Date                                                            \n",
+      "2011-09-13  5.929231       NaN    NaN     NaN           5.929231\n",
+      "2011-09-14  5.590798       NaN    NaN     NaN           5.590798\n",
+      "2011-09-15  5.094272       NaN    NaN     NaN           5.094272\n",
+      "2011-09-16  4.854515       NaN    NaN     NaN           4.854515\n",
+      "2011-09-17  4.870000       NaN    NaN     NaN           4.870000\n",
+      "2011-09-18  4.839576       NaN    NaN     NaN           4.839576\n",
+      "2011-09-19  4.900000       NaN    NaN     NaN           4.900000\n",
+      "2011-09-20  5.388054       NaN    NaN     NaN           5.388054\n",
+      "2011-09-21  5.706075       NaN    NaN     NaN           5.706075\n",
+      "2011-09-22  5.696960       NaN    NaN     NaN           5.696960\n",
+      "2011-09-23  5.707099       NaN    NaN     NaN           5.707099\n",
+      "2015-11-03 00:00:00\n"
      ]
     }
    ],
@@ -52635,19 +52678,19 @@
     "\n",
     "date1     = btc_usd_datasets.index[0]\n",
     "date2     = btc_usd_datasets.index[10]\n",
-    "\n",
     "numdays   = -30\n",
-    "\n",
-    "#for date in range(date1,date2,3):\n",
-    "#        print(date)\n",
     "a         = (date1-date2).days\n",
-    "\n",
-    "#base      = datetime.datetime.today()\n",
-    "#date_list = [base - datetime.timedelta(days=x) for x in range(0, numdays)]\n",
-    "\n",
     "new_date = date1 - datetime.timedelta(days=numdays)\n",
+    "\n",
+    "\n",
     "print(new_date)\n",
-    "print(date1)\n"
+    "print(date1)\n",
+    "\n",
+    "print(btc_usd_datasets.loc[date1:date2])\n",
+    "\n",
+    "peak_date = btc_usd_datasets.index[final_end]\n",
+    "new_Date1 = peak_date[0] + datetime.timedelta(days=1)\n",
+    "print(new_Date1)"
    ]
   }
  ],
